fixed alignment issue?

--- a/less/main.less
+++ b/less/main.less
@@ -11,11 +11,11 @@
 
 	#spawner
 	{
-		width: 25%;
+		width: 295px;
 		height: @default_height;
 		float: left;
 		padding: 0 0 0 0;
-		margin: 0 0 0 0;
+		margin: 0 auto;
 	}
 
 	#arena
@@ -23,20 +23,21 @@
 		width: @img_width;
 		height: @img_height;
 		float: left;
+		/*
 		background-image: url('./img/arena3.png');
 		background-size: contain;
-		margin-right: 10px;
-		margin-left: 10px;
+		*/
+		margin: 0 auto;
 		margin-top: @top_padding;
 		padding: 0 0 0 0;
 	}
 
 	#shop
 	{
-		width: 25%;
+		width: 295px;
 		height: @default_height;
 		float: left;
 		padding: 0 0 0 0;
-		margin: 0 0 0 0;
+		margin: 0 auto;
 	}
 }
